src/objects/CPA_Requirements_and_Deliverables__c.object
<CustomObject>
    <description>It describes Unilever’s requirements in respect of this Project . Identify the main deliverable expected and the specific milestone goals that Supplier is required to meet. These requirements should be already approved by the Unilever business</description>
    <fields>
        <fullName>Business_Process_Area_del__c</fullName>
        <description>Examples:SC, IM, Marketing, R&amp;D, CD, Finance, HR, IT&amp;Comms</description>
        <label>Business Process Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Description_del__c</fullName>
        <inlineHelpText>Provide a description of the high level requirement
Good Receipt postings must reflect Actual deliveries of Goods and Services</inlineHelpText>
        <label>High Level Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_or_changed_requirement_del__c</fullName>
        <label>New or changed requirement</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PWORF_Requirement_Deliverables__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It describes Unilever’s requirements in respect of this Project .</description>
        <label>PWORF Requirement &amp; Deliverables</label>
        <referenceTo>CPA_PWORF__c</referenceTo>
        <relationshipLabel>Requirements and Deliverables</relationshipLabel>
        <relationshipName>Requirements_and_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Type_del__c</fullName>
        <description>Examples: Interface, Data, Process, SI, Security and Control, Reporting, Functional</description>
        <label>Requirement Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Requirements and Deliverables</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_CPA_Requirements_and_Deliverables</fullName>
        <filterScope>Queue</filterScope>
        <label>ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_Requirements_and_Deliverables</fullName>
        <filterScope>Queue</filterScope>
        <label>ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_CPA_Requirements_and_Deliverables</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_Requirements_and_Deliverables</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_CPA_Requirements_and_Deliverables</fullName>
        <filterScope>Queue</filterScope>
        <label>SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_Requirements_and_Deliverables</fullName>
        <filterScope>Queue</filterScope>
        <label>SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Requirements and Deliverables Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements and Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>